@@ -382,6 +382,8 @@ name|wrap
 parameter_list|(
 name|List
 argument_list|<
+name|?
+extends|extends
 name|IndexCommit
 argument_list|>
 name|list
@@ -527,6 +529,11 @@ name|void
 name|onInit
 parameter_list|(
 name|List
+argument_list|<
+name|?
+extends|extends
+name|IndexCommit
+argument_list|>
 name|list
 parameter_list|)
 throws|throws
@@ -568,6 +575,11 @@ name|void
 name|onCommit
 parameter_list|(
 name|List
+argument_list|<
+name|?
+extends|extends
+name|IndexCommit
+argument_list|>
 name|list
 parameter_list|)
 throws|throws
